--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,6 @@
 /etc/
 .pytest_cache
 output-rhel8/
-roles/RHEL8_STIG/
-roles/grub_password/
-roles/chrony
-roles/hudecof.grub-password
+roles/*
 files/
 collections/
