--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -49,6 +49,11 @@ reboot --eject
 
 %packages --ignoremissing --excludedocs --instLangs=en_US.UTF-8
 @core
+glibc-langpack-en
+langtable
+policycoreutils-python3
+libsemanage-python3
+python3-cryptography
 bzip2
 dracut-config-generic
 grub2-pc
