--- a/vagrant-playbook.yml
+++ b/vagrant-playbook.yml
@@ -7,7 +7,10 @@
   gather_facts: true
   collections: community.general
 
+  vars:
+    rhel8cis_rule_5_3_4: false
+
   roles:
-    - nettime
-    - etcd
+    #  - docker
+    - RHEL8-CIS
 ...
