--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,8 @@
 /boot/
 /etc/
 .pytest_cache
-output-rhel8/
-roles/RHEL8_STIG/
-roles/grub_password/
-roles/chrony
-roles/hudecof.grub-password
-files/
-collections/
+output-alma8/
+packer_cache/
+report.html
+/CHECKSUM
+/RPM-GPG-KEY-AlmaLinux
