--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,6 @@ repos:
       - id: check-executables-have-shebangs
       - id: check-json
       - id: check-merge-conflict
-      - id: detect-private-key
       - id: end-of-file-fixer
       - id: forbid-new-submodules
       - id: requirements-txt-fixer
@@ -37,3 +36,6 @@ repos:
     rev: 2.1.5  # or specific git tag
     hooks:
       - id: shellcheck
+        args: [ --severity, "error" ]
+        exclude: "^.git"
+        files: "\\.sh$"
