--- a/Vagrantfile.template
+++ b/Vagrantfile.template
@@ -15,7 +15,15 @@ Vagrant.configure(2) do |config|
   config.vm.define 'alma8' do |srv|
     srv.vm.box = 'alma8/efi'
     srv.vm.hostname = 'alma8-vm'
-    srv.vm.network 'private_network', ip: '192.168.56.8'
+    srv.vm.network "private_network", type: "dhcp", bridge: "Default Switch"
+
+    srv.vm.provider "hyperv" do |hyperv|
+        hyperv.cpus = 4
+        hyperv.memory = "4096"
+        hyperv.vmname = "alma8-vm"
+        hyperv.enable_virtualization_extensions = true
+        hyperv.linked_clone = true
+    end
 
     srv.vm.provider :virtualbox do |virtualbox|
       virtualbox.name = 'alma8-vm'
