--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -2,13 +2,13 @@
 collections:
   - name: ansible.posix
   - name: community.general
-  #  - name: jfrog.platform
-  #  - name: community.postgresql
+  - name: community.postgresql
+  - name: jfrog.platform
 
 roles:
-  - src: https://github.com/ansible-lockdown/RHEL8-CIS.git
+  - src: https://github.com/TeamSalvador/RHEL8-CIS.git
     name: RHEL8-CIS
-  - src: https://github.com/ansiblebook/ansible_role_ssh.git
+  - src: https://github.com/TeamSalvador/ansible_role_ssh.git
     name: openssh
-  - src: https://github.com/dockpack/base_line.git
+  - src: https://github.com/TeamSalvador/base_line.git
     name: base_line
