--- a/ansible/vagrant-playbook.yml
+++ b/ansible/vagrant-playbook.yml
@@ -1,8 +1,16 @@
-#!/usr/bin/env ansible-playbook -K
+#!/usr/bin/env ansible-playbook
 ---
+- name: Deploy Proxy
+  hosts: proxy
+  become: true
+  gather_facts: true
+  tags:
+    - proxy
+  roles:
+    - role: proxy
 
 - name: Security Audit
-  hosts: all
+  hosts: almalinux
   become: true
   gather_facts: true
 
@@ -32,3 +40,43 @@
         path: /tmp/report.html
         owner: "{{ ansible_ssh_user }}"
         mode: '0600'
+
+- name: Deploy Postgres
+  hosts: postgres_servers
+  collections:
+    - community.postgresql
+    - community.general
+    - jfrog.platform
+  tags:
+    - postgres
+  roles:
+    - role: postgres
+      when: postgres_enabled | bool
+
+- name: Deploy Artifactory
+  hosts: artifactory_servers
+  become: true
+  gather_facts: true
+  collections:
+    - community.general
+    - jfrog.platform
+  tags:
+    - deploy
+  serial:
+    - 1
+    - 100%
+  roles:
+    - role: firewall
+    - role: tls_config
+    - role: artifactory
+      when: artifactory_enabled | bool
+
+- name: Configure Artifactory
+  hosts: artifactory_servers
+  become: true
+  gather_facts: true
+  tags:
+    - configure
+  roles:
+    - role: artifactory_config
+...
