--- a/ansible/roles/proxy/defaults/main.yml
+++ b/ansible/roles/proxy/defaults/main.yml
@@ -4,3 +4,5 @@ proxy_group: squid
 proxy_port: 3128
 proxy_home: /home/{{ proxy_user }}
 proxy_data: "{{ proxy_home }}"
+proxy_log: "{{ proxy_data }}/log"
+proxy_cache: "{{ proxy_data }}/cache"
