--- a/ansible/roles/proxy/tasks/main.yml
+++ b/ansible/roles/proxy/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Ensure group exists
   group:
     name: "{{ proxy_group }}"
-    gid: 23
+    gid: 13
     state: present
     system: true
 
@@ -10,11 +10,44 @@
   user:
     name: "{{ proxy_user }}"
     group: "{{ proxy_group }}"
-    uid: 23
+    uid: 13
     create_home: true
-    home: /var/spool/squid
+    home: "{{ proxy_home }}"
     state: present
     system: true
+
+- name: Ensure cache dirs exists
+  ansible.builtin.file:
+    path: "{{ proxy_cache }}/{{ item }}"
+    state: directory
+    owner: "{{ proxy_user }}"
+    group: "{{ proxy_group }}"
+    mode: 0755
+  loop:
+    - '00'
+    - '01'
+    - '02'
+    - '03'
+    - '04'
+    - '05'
+    - '06'
+    - '07'
+    - '08'
+    - '09'
+    - '0A'
+    - '0B'
+    - '0C'
+    - '0D'
+    - '0E'
+    - '0F'
+
+- name: Ensure log dir exists
+  ansible.builtin.file:
+    path: "{{ proxy_log }}"
+    state: directory
+    owner: "{{ proxy_user }}"
+    group: "{{ proxy_group }}"
+    mode: 0755
 
 - name: Ensure podman is installed
   ansible.builtin.package:
