--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,18 @@
 [defaults]
-inventory = inventory
+inventory = inventory/hosts
 callbacks_enabled = timer
-stdout_callback = yaml
+stdout_callback = unixy
 remote_tmp = /var/tmp/${USER}/ansible
 host_key_checking = False
+gathering = smart
+fact_caching = jsonfile
+fact_caching_timeout = 86400
+fact_caching_connection = /tmp/ansible_fact_cache
+
+forks = 8
+
+[connection]
+pipelining = true
+
+[ssh_connection]
+ssh_args = -4 -o PreferredAuthentications=publickey -o ControlMaster=auto -o ControlPersist=10m -o ControlPath=~/.ssh/sockets/%r@%h:%p -o ConnectTimeout=60s
