--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,6 @@ steps:
     templatePath: 'alma8.pkr.hcl'
     command: 'validate'
   env:
-    ARM_SUBSCRIPTION_ID: $(subscriptionId)
-    ARM_RESOURCE_GROUP: $(resourceGroup)
-    ARM_STORAGE_ACCOUNT: $(storageAccount)
+    ARM_SUBSCRIPTION_ID: $(subscription_id)
+    ARM_RESOURCE_GROUP: $(resource_group)
+    ARM_STORAGE_ACCOUNT: $(storage_account)
