Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,4 +11,17 @@ steps:
     azureSubscription: 'AzureDevOps'
     templatePath: 'alma8.pkr.hcl'
     command: 'init'
-
+- task: Packer@1
+  inputs:
+    connectedServiceType: 'azure'
+    azureSubscription: 'AzureDevOps'
+    templatePath: 'alma8.pkr.hcl'
+    command: 'validate'
+- task: Packer@1
+  inputs:
+    connectedServiceType: 'azure'
+    azureSubscription: 'AzureDevOps'
+    templatePath: 'alma8.pkr.hcl'
+    command: 'build'
+    force: true
+    options: '--only azure-arm.alma8'
