--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,4 +11,9 @@ steps:
     azureSubscription: 'AzureDevOps'
     templatePath: 'alma8.pkr.hcl'
     command: 'init'
-
+- task: Packer@1
+  inputs:
+    connectedServiceType: 'azure'
+    azureSubscription: 'AzureDevOps'
+    templatePath: 'alma8.pkr.hcl'
+    command: 'validate'
