--- a/ansible/roles/proxy/tasks/main.yml
+++ b/ansible/roles/proxy/tasks/main.yml
@@ -1,18 +1,35 @@
 ---
 - name: Ensure group exists
-  group:
+  ansible.builtin.group:
     name: "{{ proxy_group }}"
     gid: 13
     state: present
     system: true
 
+- name: Ensure groups exists
+  ansible.builtin.group:
+    name: "{{ item.group }}"
+    gid: "{{ item.gid }}"
+    state: present
+    system: true
+  loop:
+    - group: shadow
+      gid: 42
+    - group: utmp
+      gid: 43
+    - group: crontab
+      gid: 101
+    - group: ssl-cert
+      gid: 102
+
 - name: Ensure user exists
-  user:
+  ansible.builtin.user:
     name: "{{ proxy_user }}"
     group: "{{ proxy_group }}"
     uid: 13
     create_home: true
     home: "{{ proxy_home }}"
+    shell: /usr/sbin/nologin
     state: present
     system: true
 
@@ -94,4 +111,3 @@
     owner: "{{ proxy_user }}"
     group: "{{ proxy_group }}"
   notify: Restart proxy
-
