--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -1,10 +1,11 @@
 ---
-collections:
-  - name: ansible.posix
-  - name: community.general
-  - name: community.postgresql
-  - name: jfrog.platform
 
 roles:
+  # https://github.com/ansible-lockdown/RHEL8-CIS/archive/refs/tags/2.2.1.tar.gz
   - src: https://github.com/ansible-lockdown/RHEL8-CIS.git
-    name: RHEL8-CIS
+    version: 2.2.1
+    name: rhel8cis
+  - src: https://github.com/ansiblebook/ansible_role_ssh.git
+    name: openssh
+  - src: https://github.com/dockpack/base_line.git
+    name: base_line
