A bit more secure yet compliant

--- a/ansible/packer-playbook.yml
+++ b/ansible/packer-playbook.yml
@@ -6,15 +6,18 @@
   become: true
   gather_facts: true
 
+  vars:
+      crypto_policy: FIPS
   roles:
     - role: yum_config
-      repo_url: 'https://almalinux.mirror.liteserver.nl/'
-      # repo url is a mirror or internal repo/proxy for the RPMs
+      repo_url: 'https://mirrors.xtom.nl/almalinux'
+      # repo url is a mirror or internal repo/proxy for the RPM
+      # xtom.nl is the only mirror usable with crypto_policy: FUTURE
+    - openssh
     - role: rhel8cis
       rhel8cis_rule_5_3_4: false
       rhel8cis_remote_log_server: loghost
-    - role: openssh
-      crypto_policy: FUTURE
+      rhel8cis_crypto_policy: "{{ crypto_policy }}"
     - base_line
 
 ...
