--- a/ansible/roles/proxy/tasks/main.yml
+++ b/ansible/roles/proxy/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: Ensure group exists
-  group:
+  ansible.builtin.group:
     name: "{{ proxy_group }}"
     gid: 13
     state: present
     system: true
 
 - name: Ensure user exists
-  user:
+  ansible.builtin.user:
     name: "{{ proxy_user }}"
     group: "{{ proxy_group }}"
     uid: 13
@@ -94,4 +94,3 @@
     owner: "{{ proxy_user }}"
     group: "{{ proxy_group }}"
   notify: Restart proxy
-
