--- a/ansible/packer-playbook.yml
+++ b/ansible/packer-playbook.yml
@@ -14,6 +14,7 @@
       # repo url is a mirror or internal repo/proxy for the RPM
       # xtom.nl is the only mirror usable with crypto_policy: FUTURE
     - role: rhel8cis
+      rhel8cis_rule_1_1_1_2: false
       rhel8cis_rule_5_2_15: false
       rhel8cis_rule_5_3_4: false
       rhel8cis_ssh_loglevel: VERBOSE
