--- a/ansible/vagrant-playbook.yml
+++ b/ansible/vagrant-playbook.yml
@@ -9,35 +9,16 @@
   roles:
     - role: proxy
 
-- name: Security Audit
-  hosts: all
+- name: Create Kickstart server
+  hosts: web
   become: true
   gather_facts: true
+  tags:
+    - web
+  roles:
+    - apache
+    - tftp_setup
+    - kickstart
+    - dhcp_setup
 
-  pre_tasks:
-
-    - name: Install packages
-      ansible.builtin.package:
-        state: present
-        name:
-          - openscap-scanner
-          - scap-security-guide
-
-  post_tasks:
-
-    - name: Run the audit and create a report.
-      ansible.builtin.command:
-        oscap xccdf eval \
-          --report /tmp/report.html
-          --profile cis
-          /usr/share/xml/scap/ssg/content/ssg-almalinux8-ds.xml
-      changed_when: true
-      no_log: false
-      ignore_errors: true
-
-    - name: Set permissions
-      ansible.builtin.file:
-        path: /tmp/report.html
-        owner: "{{ ansible_ssh_user }}"
-        mode: '0600'
 ...
