CIS hardening in Kickstart!

--- a/ansible/roles/kickstart/templates/ks.cfg
+++ b/ansible/roles/kickstart/templates/ks.cfg
@@ -55,6 +55,16 @@ logvol swap --name=lv_swap --vgname=vgsys --size=2016
 # disable kdump service
 %addon com_redhat_kdump --disable
 %end
+# The OpenSCAP installer add-on is used to apply SCAP (Security Content Automation Protocol)
+# content - security policies - on the installed system.This add-on has been enabled by default
+# since Red Hat Enterprise Linux 7.2. When enabled, the packages necessary to provide this
+# functionality will automatically be installed. However, by default, no policies are enforced,
+# meaning that no checks are performed during or after installation unless specifically configured.
+
+%addon org_fedora_oscap
+ content-type = scap-security-guide
+ profile = xccdf_org.ssgproject.content_profile_cis
+%end
 
 # Startup mode
 authselect --enableshadow --passalgo=sha512 --kickstart
