--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -1,5 +1,5 @@
 text
-# Use CDROM installation media
+# Use CDROM installation media for a local Packer build
 cdrom
 
 # Do not run the Setup Agent on first boot
