--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ molecule-docker==2.0.0
 molecule-podman==2.0.2
 onigurumacffi==1.2.0
 packaging==21.3
+passlib
 Parsley==1.3
 pathspec==0.9.0
 pbr==5.10.0
