--- a/ansible/roles/apache/tasks/absent.yml
+++ b/ansible/roles/apache/tasks/absent.yml
@@ -52,6 +52,7 @@
   ansible.builtin.file:
     path: /var/www/
     state: absent
+  ignore_errors: true  # mounted DVD
 
 - name: Remove apache user
   become: true
