--- a/ansible/roles/tftp_setup/tasks/main.yml
+++ b/ansible/roles/tftp_setup/tasks/main.yml
@@ -4,5 +4,5 @@
 # Tasks
 #
 - name: Desired state
-  include_tasks: "{{ desired_state }}.yml"
+  ansible.builtin.include_tasks: "{{ desired_state }}.yml"
 ...
