--- a/ansible/roles/dhcp_setup/handlers/main.yml
+++ b/ansible/roles/dhcp_setup/handlers/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Reload firewalld
   ansible.builtin.command: firewall-cmd --reload
+  changed_when: true
   become: true
 
 - name: Start DHCPd
