--- a/ansible/roles/package_management/tasks/main.yml
+++ b/ansible/roles/package_management/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
 
 - name: Re-configure for proxied use
+  when:
+    - proxy_host is defined
+    - proxy_host | length > 3
   block:
     - name: Configure proxy for package management
       environment: "{{ proxy_env | default(omit) }}"
@@ -9,9 +12,9 @@
         dest: /etc/dnf/dnf.conf
         owner: root
         group: root
-        mode: 0600
+        mode: '0600'
       no_log: false
-    
+
     - name: Configure proxy for pip
       environment: "{{ proxy_env | default(omit) }}"
       ansible.builtin.template:
@@ -19,22 +22,20 @@
         dest: /etc/pip.conf
         owner: root
         group: root
-        mode: 0600
+        mode: '0600'
       no_log: false
-    
+
     - name: Remove unneeded repo files
       ansible.builtin.file:
         path: "/etc/yum.repos.d/{{ item }}"
         state: absent
       loop: "{{ yum_repofiles_unneeded }}"
-    
+
     - name: Point repo files to repo_url
       ansible.builtin.template:
         src: "{{ item }}.j2"
         dest: "/etc/yum.repos.d/{{ item }}"
         owner: root
         group: root
-        mode: 0600
+        mode: '0600'
       loop: "{{ yum_repofiles_needed }}"
-  when: 
-    - proxy_host | length > 3
