--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -1,4 +1,7 @@
 ---
+collections:
+  - name: ansible.posix
+  - name: community.general
 
 roles:
   - src: https://github.com/ansible-lockdown/RHEL8-CIS.git
