vars in group_vars

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = ansible/inventory/hosts
 callbacks_enabled = timer
-stdout_callback = unixy
+stdout_callback = yaml
 remote_tmp = /var/tmp/${USER}/ansible
 host_key_checking = False
 gathering = smart
