--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory/hosts
+inventory = inventory
 callbacks_enabled = timer
 stdout_callback = yaml
 remote_tmp = /var/tmp/${USER}/ansible
