--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ansible/inventory/hosts
+inventory = ansible/inventory
 callbacks_enabled = timer
 stdout_callback = yaml
 remote_tmp = /var/tmp/${USER}/ansible
