--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -35,9 +35,9 @@ sed -i "s/Storage='persistent'/Storage=persistent/" /etc/systemd/journald.conf
 # CIS 4.2.3
 find /var/log/ -type f -perm /g+wx,o+rwx -exec chmod --changes g-wx,o-rwx "{}" +
 # CIS 5.1.8
-touch /etc/cron.allow  
-chown root:root /etc/cron.allow 
-chmod u-x,go-rwx /etc/cron.allow 
+touch /etc/cron.allow
+chown root:root /etc/cron.allow
+chmod u-x,go-rwx /etc/cron.allow
 # CIS 5.2.4
 echo 'AllowGroups wheel root' >> /etc/ssh/sshd_config
 # CIS 5.2.15
@@ -49,14 +49,8 @@ sed -i 's/^#ClientAliveInterval 0/ClientAliveInterval 900/' /etc/ssh/sshd_config
 mkdir /var/tmp
 chmod 1777 /var/tmp
 
-/usr/sbin/alternatives --set python /usr/bin/python3.9
-
-# permit root login via SSH with password authentication
-echo "PermitRootLogin yes" > /etc/ssh/sshd_config.d/01-permitrootlogin.conf
-
 # For Ansible
 sed -i "s/^.*requiretty/# Defaults requiretty/" /etc/sudoers
-
 
 # remove random-seed so it's not the same every time
 rm -f /var/lib/systemd/random-seed
@@ -83,6 +77,7 @@ rm -rf /var/log/anaconda*
 
 %packages --ignoremissing --excludedocs --instLangs=en_US.UTF-8
 @core
+chrony
 bash-completion
 glibc-langpack-en
 glibc-minimal-langpack
@@ -147,7 +142,7 @@ firstboot --disabled
 # Do not configure the X Window System
 skipx
 # System services
-services --enabled="NetworkManager,sshd"
+services --enabled="NetworkManager,sshd,chronyd"
 ignoredisk --only-use=sda
 
 # Partition information
@@ -158,8 +153,11 @@ clearpart --all --drives=sda --initlabel
 
 # Create primary system partitions (required for installs)
 part biosboot --fstype=biosboot --size=1
-part /boot/efi --fstype=efi --label EFI --size=60
+part /boot/efi --fstype=efi --label EFI --size=512
 part /boot --fstype=ext4 --label BOOT --size=512 --fsoptions="nodev,nosuid,noexec"
+# rhel8cis_rule_1_1_2: Ensure /tmp Located On Separate Partition
+part /tmp --fstype=tmpfs --size=1024
+part /dev/shm --fstype=tmpfs --size=1024
 part pv.01 --size=1 --ondrive=sda --grow
 
 # Create a Logical Volume Management (LVM) group (optional)
@@ -168,18 +166,16 @@ volgroup vgsys pv.01
 # Create particular logical volumes (optional)
 logvol / --fstype=xfs --name=lv_root --vgname=vgsys --size=4096 --grow
 # rhel8cis_rule_1_1_7: Ensure /home Located On Separate Partition
-logvol /home --fstype=xfs --name=lv_home --vgname=vgsys --size=8192 --fsoptions="nodev,usrquota,grpquota" --grow
-# rhel8cis_rule_1_1_2: Ensure /tmp Located On Separate Partition
-logvol /tmp --fstype=xfs --name=lv_tmp --vgname=vgsys --size=2048 --fsoptions="nodev,noexec,nosuid"
+logvol /home --fstype=xfs --name=lv_home --vgname=vgsys --size=4096 --fsoptions="nodev,nosuid"
 # rhel8cis_rule_1_1_3: Ensure /var Located On Separate Partition
-logvol /var --fstype=xfs --name=lv_var --vgname=vgsys --size=2048 --fsoptions="nodev" --grow
+logvol /var --fstype=xfs --name=lv_var --vgname=vgsys --size=4096 --fsoptions="nodev,nosuid"
 # rhel8cis_rule_1_1_4 Ensure /var/tmp Located On Separate Partition
 logvol /var/tmp --fstype=xfs --name=lv_vartmp --vgname=vgsys --size=2048 --fsoptions="nodev,noexec,nosuid"
 # rhel8cis_rule_1_1_5: Ensure /var/log Located On Separate Partition
 logvol /var/log --fstype=xfs --name=lv_log --vgname=vgsys --size=1024 --fsoptions="nodev,nosuid,noexec"
 # rhel8cis_rule_1_1_6: Ensure /var/log/audit Located On Separate Partition
-logvol /var/log/audit --fstype=xfs --name=lv_adm --vgname=vgsys --size=512 --fsoptions="nodev,nosuid,noexec"
-#logvol swap --name=lv_swap --vgname=vgsys --size=2016
+logvol /var/log/audit --fstype=xfs --name=lv_adm --vgname=vgsys --size=1024 --fsoptions="nodev,nosuid,noexec"
+logvol swap --name=lv_swap --vgname=vgsys --size=2016
 
 # System timezone
 timezone UTC --utc
