--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,8 @@ report.html
 /RPM-GPG-KEY-AlmaLinux
 ansible/roles/rhel8cis
 ansible/roles/base_line/
+ansible/roles/base_crontab/
+ansible/roles/base_goss/
+ansible/roles/base_nettime/
 ansible/roles/openssh/
 ansible/collections/requirements.yml
