--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -1,19 +1,3 @@
 ---
-
-time_server: 192.168.179.1
-rhel8cis_rule_1_1_1_3: false  # UDF file systems module required on Azure
-rhel8cis_rule_1_9:  # do not update ansible in the packer run
-rhel8cis_rule_5_3_4: false
-rhel8cis_ssh_loglevel: VERBOSE
-rhel8cis_remote_log_server: loghost
-rhel8cis_allowed_crypto_policies: FIPS
-rhel8cis_crypto_policy: FIPS
-rhel8cis_auditd:
-  space_left_action: EMAIL
-  action_mail_acct: root
-  admin_space_left_action: HALT
-  max_log_file_action: rotate
-allow_auditd_uid_user_exclusions: true
-rhel8cis_auditd_uid_exclude:
-  - vagrant
-  - admin
+# TODO:Installed GPG Keys do not meet expected values
+rhel9cis_rule_1_2_1: false
