--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -1,3 +1,7 @@
 ---
-# TODO:Installed GPG Keys do not meet expected values
+# UDF filesystems are mandatory on Azure.
+rhel9cis_rule_1_1_1_2: false
+# TODO Installed GPG Keys do not meet expected values
 rhel9cis_rule_1_2_1: false
+# sudo password disabled for automation
+rhel9cis_rule_5_3_4: false
