--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -4,6 +4,6 @@ collections:
   - name: community.general
 
 roles:
-  - src: https://github.com/ansible-lockdown/RHEL9-CIS.git
-    version: devel
+  - src: https://github.com/bbaassssiiee/RHEL9-CIS.git
+    version: master
     name: rhel9cis
