--- a/ansible/vagrant-playbook.yml
+++ b/ansible/vagrant-playbook.yml
@@ -1,28 +1,34 @@
-#!/usr/bin/env ansible-playbook
-# Usage: ./ks-server.yml -i inventory -e main_user=vagrant -e main_password=vagrant
+#!/usr/bin/env ansible-playbook -K
 ---
 
-- name: Create Proxy Server
-  hosts: proxy_servers
+- name: Security Audit
+  hosts: all
   become: true
   gather_facts: true
-  tags:
-    - proxy
-  roles:
-    - proxy
 
-- name: Create Kickstart server
-  hosts: kickstart_servers
-  become: true
-  gather_facts: true
-  vars:
-    main_user: vagrant
-    main_password: vagrant
-  tags:
-    - kickstart
-  roles:
-    - dual_homed
-    - apache
-    - tftp_setup
-    - kickstart
-    - dhcp_setup
+  pre_tasks:
+
+    - name: Install packages
+      ansible.builtin.package:
+        state: present
+        name:
+          - openscap-scanner
+          - scap-security-guide
+
+  post_tasks:
+
+    - name: Run CIS oscap scan and create /tmp/report.html
+      ansible.builtin.command:
+        oscap xccdf eval --profile cis \
+          --report /tmp/report.html \
+          /usr/share/xml/scap/ssg/content/ssg-almalinux9-ds.xml
+      changed_when: true
+      no_log: false
+      register: scan_return
+      failed_when: scan_return.stdout is not defined
+
+    - name: Set permissions
+      ansible.builtin.file:
+        path: /tmp/report.html
+        owner: "{{ ansible_ssh_user }}"
+        mode: '0600'
