--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -39,7 +39,7 @@ rootpw --iscrypted $6$hGuNal58RjvpKAqy$UPGgU7QRk0ZA.dcGO0xZwsAmPgDDjzDs9f3UV3X5.
 user --groups=wheel --name=vagrant --password=$6$gsho0TtCgvXZw93B$r284xVIA4W77DCJoYHE/GY367PibY0tdY0.cGe3Md3uK6nm5yALHjypTXoNcJsJ7mus3N.Lw3U4sTVliljMkv1 --iscrypted --gecos="vagrant"
 
 
-%packages --ignoremissing --excludedocs --instLangs=en_US.UTF-8
+%packages --ignoremissing --excludedocs --inst-langs=en_US.UTF-8
 @core
 # Ansible
 ansible-core
